Fix spacing on iphone x size

--- a/portfolio-site/style.css
+++ b/portfolio-site/style.css
@@ -132,14 +132,19 @@ li {
 }
 
 .fa-grip-horizontal:hover{
-  color: rgb(44, 44, 44);
+  color: rgb(80, 80, 80);
 }
 
 #grids:checked + .grid-view ~ .portfolio-grid{
   grid-template-columns: repeat(4, 1fr);
   grid-template-areas:
   "p-grid7 p-grid5 p-grid3 p-grid6"
-  "p-grid1 p-grid2 p-grid4 p-grid6";
+  "p-grid1 p-grid2 p-grid4 p-grid8";
+  padding: 5rem 1rem 1rem 1rem;
+}
+
+#grids:checked + .grid-view ~ .portfolio-grid section ~ section{
+  font-size: 2rem;
 }
 
  /* tablet button */
@@ -159,7 +164,7 @@ li {
 }
 
 .fa-tablet-alt:hover{
-  color: rgb(44, 44, 44);
+  color: rgb(80, 80, 80);
 }
 
 #tablet{
@@ -169,7 +174,7 @@ li {
 #tablet:checked + .tablet-view ~ .portfolio-grid{
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
-  "p-grid7 p-grid7"
+  "p-grid7 p-grid8"
   "p-grid1 p-grid1"
   "p-grid1 p-grid1"
   "p-grid5 p-grid3"
@@ -199,7 +204,7 @@ li {
   z-index: 5;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 5rem;
+  padding-left: 0rem;
 }
 
 .fa-mobile{
@@ -210,7 +215,7 @@ li {
 }
 
 .fa-mobile:hover{
-  color: rgb(44, 44, 44);
+  color: rgb(80, 80, 80);
 }
 
 #phone{
@@ -220,13 +225,14 @@ li {
 #phone:checked + .phone-view ~ .portfolio-grid{
   grid-template-columns: repeat(1, 1fr);
   grid-template-areas:
-  "p-grid6"
+  "p-grid8"
   "p-grid5"
   "p-grid3"
   "p-grid2"
   "p-grid1"
   "p-grid7"
-  "p-grid4";
+  "p-grid4"
+  "p-grid6";
 }
 
 /* nav */
@@ -348,11 +354,12 @@ body {
     "p-grid1 p-grid2"
     "p-grid3 p-grid5"
     "p-grid4 p-grid4"
-    "p-grid6 p-grid7";
+    "p-grid6 p-grid7"
+    "p-grid8 p-grid8";
   grid-gap: 1.5rem;
   justify-content: center;
   padding: 5rem;
-  grid-area: m-grid4;
+  grid-area: m-grid5;
 }
 
 .p-grid1,
@@ -361,7 +368,8 @@ body {
 .p-grid4,
 .p-grid5,
 .p-grid6,
-.p-grid7 {
+.p-grid7,
+.p-grid8 {
   color: white;
   cursor: pointer;
   display: flex;
@@ -382,7 +390,8 @@ body {
 .p-grid4:after,
 .p-grid5:after,
 .p-grid6:after,
-.p-grid7:after {
+.p-grid7:after,
+.p-grid8:after {
   bottom: -5rem;
   font-size: 1.3rem;
   height: 10%;
@@ -401,7 +410,7 @@ body {
 }
 
 .p-grid3:after {
-  content: "Talks, Podcasts, and more";
+  content: "Podcasts, Tutorials, Nonsense";
 }
 
 .p-grid4:after {
@@ -409,7 +418,7 @@ body {
 }
 
 .p-grid5:after {
-  content: "front end mockup for a snowboarding e-commerce shop";
+  content: "snowboarding e-commerce shop";
 }
 
 .p-grid6:after {
@@ -420,13 +429,18 @@ body {
   content: "a blog that helps me sleep at night";
 }
 
+.p-grid8:after{
+  content: "never stop exploring";
+}
+
 .p-grid1:hover,
 .p-grid2:hover,
 .p-grid3:hover,
 .p-grid4:hover,
 .p-grid5:hover,
 .p-grid6:hover,
-.p-grid7:hover {
+.p-grid7:hover,
+.p-grid8:hover {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.438);
 }
 
@@ -436,7 +450,8 @@ body {
 .p-grid4:hover:after,
 .p-grid5:hover:after,
 .p-grid6:hover:after,
-.p-grid7:hover:after {
+.p-grid7:hover:after,
+.p-grid8:hover:after {
   bottom: 3rem;
   opacity: 100;
 }
@@ -543,6 +558,20 @@ body {
   center / cover
       url(https://images.unsplash.com/photo-1518684542453-94d5620df5f1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b529ad36b280c715b20256e095f93ff3&auto=format&fit=crop&w=2033&q=80);
 }
+
+.p-grid8 {
+  background: linear-gradient(rgba(75, 75, 75, 0.424), rgba(36, 36, 36, 0.842)),
+  center / cover
+      url(https://images.unsplash.com/photo-1478131143081-80f7f84ca84d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c43eff2f7cb0c2f6838152683da69f81&auto=format&fit=crop&w=1950&q=80);
+  grid-area: p-grid8;
+}
+
+.p-grid8:hover {
+  background: linear-gradient(rgba(75, 75, 75, 0.808), rgba(36, 36, 36, 0.87)),
+  center / cover
+      url(https://images.unsplash.com/photo-1478131143081-80f7f84ca84d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c43eff2f7cb0c2f6838152683da69f81&auto=format&fit=crop&w=1950&q=80);
+}
+
 
 /* personal grid start */
 
@@ -795,13 +824,24 @@ body {
       "p-grid1"
       "p-grid7"
       "p-grid3"
-      "p-grid5"
+      "p-grid8"
       "p-grid4"
+      "p-grid5"
       "p-grid6"
       "p-grid2";
     grid-gap: 1.5rem;
     justify-content: center;
     padding: 5rem 0;
+  }
+
+  #grids:checked + .grid-view ~ .portfolio-grid{
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas:
+    "p-grid7 p-grid5"
+    "p-grid3 p-grid6"
+    "p-grid1 p-grid2"
+    "p-grid4 p-grid8" ;
+    padding: 5rem 1rem 1rem 1rem;
   }
 
   body {
@@ -822,7 +862,7 @@ body {
   }
 
   .landing{
-    margin-top: 6rem;
+    margin-top: 3rem;
   }
 
   .about-me {
@@ -848,7 +888,8 @@ body {
 
   .hero-text :first-child{
     font-size: 4rem;
-    padding-top: 2rem;
+    padding-top: 12rem;
+    margin-bottom: 0rem;
   }
 
   main .hero-text {
@@ -859,7 +900,6 @@ body {
 @media only screen and (max-width: 375px){
  .hero-text :first-child{
     font-size: 3.5rem;
-    padding-top: 2rem;
   }
 
   #check:checked + .🌭 + nav {
